# ArgusNexus

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  config.yaml.example  pyproject.toml  requirements.txt  setup.py
data/: demo.db  golden_test.db
docs/: RUNBOOK.md  STRATEGY_RESEARCH_REPORT.md
docs/plans/: 2025-12-17-validation-infrastructure-design.md  2025-12-17-validation-infrastructure-implementation.md  2025-12-18-adx-trend-strength-strategy-design.md
scripts/: argusnexus-dashboard-api.service  argusnexus-portfolio.service  argusnexus-survivor-paper.service  argusnexus-v4-paper.service  backfill_reflections.py  backfill_reflections_sync.py  backtest_combined_portfolio.py  backtest_multi_asset.py  close_postmortem_PYR_2025_12_16.py  demo_execution.py  demo_risk.py  demo_strategy.py  deploy_bloomberg.sh  deploy_paper_trader.sh  deploy_public_dashboard.sh  deploy_survivor.sh  fleet_watchdog.py  golden_run.py  init_truth_db.py  live_unified_trader.py  manage_system.py  mexc_simulation.py  monthly_performance_report.py  optimize_exit_signals.py  price_zone_backtest_analysis.py  research_dd_limit.py  research_vol_regime.py  retroactive_phantom_analysis.py  rollout_pyr_controlled.py  run_backtest.py  run_scanner.py  setup_dual_domain.sh  strategy_lab.py  strategy_lab_v2.py  strategy_lab_v3.py  strategy_lab_v4.py  test_gemini_connection.py  validate_bear_market.py  validate_reconciliation.py  validate_winner.py  (+3 more)
scripts/archive/: live_paper_trader.py  live_portfolio_trader.py  paper_trade_burnin.py  paper_trade_survivor.py
src/: __init__.py  discord_bot.py  engine.py  fleet_manager.py  notifier.py  orchestrator.py  scanner.py
src/api/: __init__.py  card_image.py  main.py
src/backtest/: __init__.py  engine.py
src/core/: __init__.py
src/data/: __init__.py  loader.py
src/engine/: __init__.py  multi_timeframe.py
src/execution/: __init__.py  base.py  gemini.py  live.py  paper.py  schema.py  websocket.py
src/learning/: __init__.py  confidence.py  ppo_agent.py  reflexion.py  regime.py
src/portfolio/: __init__.py  alerts.py  portfolio_manager.py
src/risk/: __init__.py  manager.py  portfolio.py  schema.py
src/session/: __init__.py  liquidity.py  manager.py  schema.py
src/social/: __init__.py  discord_bot.py  twitter_bot.py
src/strategy/: __init__.py  adx_trend.py  coinbase_survivor.py  donchian.py  dual_ema.py  mostly_long_btc.py  price_zone.py  professional.py  vol_regime_core.py
src/truth/: __init__.py  llm_insights.py  logger.py  (+3 more)
static/: brain.html  decision.html  index.html  index.html.bak  mobile-dashboard.html  scoreboard.html  stats.html  strategy.html
tests/: __init__.py  test_position_reconciliation.py
(+36 files in other folders)
